--- a/config.env
+++ b/config.env
@@ -7,4 +7,4 @@ TO_CHATS = "-1001817095750"
 FROM_CHATS = "-1001724423625"
 ADVANCE_CONFIG = ""
 TELEGRAM_SESSION = ""
-BASE_URL_OF_BOT = "https://himanahuautofor-49v8.onrender.com"
+BASE_URL_OF_BOT = "https://himanahuautofor-r19h.onrender.com"
